display data frame with new generated variable
wrap the assignment code in parentheses so student can see the effect of the `mutate()` command.

--- a/01-data/01-lesson/01-01-lesson.Rmd
+++ b/01-data/01-lesson/01-01-lesson.Rmd
@@ -410,11 +410,12 @@ Instead we can create a new variable, named `read_cat`, with the `mutate()`
 function and the helpful `if_else()` function. 
 
 ```{r hsb2-mutate-read-cat, exercise=TRUE}
-hsb2 <- hsb2 %>%
+(hsb2 <- hsb2 %>%
   mutate(read_cat = if_else(read < avg_read,
                             "below average",
                             "at or above average")
          )
+)
 ```
 
 First, we start with the data frame, `hsb2`, and pipe it into the `mutate()` 
