--- a/01-data/01-lesson/01-01-lesson.Rmd
+++ b/01-data/01-lesson/01-01-lesson.Rmd
@@ -415,7 +415,8 @@ function and the helpful `if_else()` function.
                             "below average",
                             "at or above average")
          )
-)
+
+hsb2
 ```
 
 First, we start with the data frame, `hsb2`, and pipe it into the `mutate()` 
