display data frame with new generated variable (#65)
* display data frame with new generated variable

wrap the assignment code in parentheses so student can see the effect of the `mutate()` command.

* Update 01-data/01-lesson/01-01-lesson.Rmd

* Update 01-data/01-lesson/01-01-lesson.Rmd

Co-authored-by: Mine Cetinkaya-Rundel <cetinkaya.mine@gmail.com>

--- a/01-data/01-lesson/01-01-lesson.Rmd
+++ b/01-data/01-lesson/01-01-lesson.Rmd
@@ -422,6 +422,8 @@ hsb2 <- hsb2 %>%
                             "below average",
                             "at or above average")
          )
+
+hsb2
 ```
 
 First, we start with the data frame, `hsb2`, and pipe it into the `mutate()` 
