match solution with previous hints

--- a/02-explore/01-lesson/02-01-lesson.Rmd
+++ b/02-explore/01-lesson/02-01-lesson.Rmd
@@ -231,7 +231,7 @@ comics %>%
 
 ```{r ex1-solution}
 # Print the first rows of the data
-comics
+glimpse(comics)
 
 # Check levels of align
 comics %>% 
