--- a/02-explore/01-lesson/02-01-lesson.Rmd
+++ b/02-explore/01-lesson/02-01-lesson.Rmd
@@ -376,7 +376,7 @@ ggplot(comics, aes(x = gender, fill = align)) +
 
 In many visualizations you make, you may be interested in changing the axis labels on the plot. Here, the axis labels of "gender" and "align" could use some spicing up, to be more descriptive. To change the labels of a `ggplot()`, you add (`+`) a `labs()` layer to the plot, where you can specify the `x`, `y`, and `fill` labels, as well as the plot's `title`. 
  
-```{r}
+```{r labels, exercise = TRUE}
 ggplot(comics, aes(x = gender, fill = align)) + 
   geom_bar(position = "dodge") + 
   labs(x = "Character's Sex", 
